build.gradle tasks `JavaCompile`, `Test`, `CheckStyle` configured
Also java toolchains configured